# yet-another-rust-database

./: .gitignore  .rustc_info.json  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rust-toolchain.toml  todo.txt
client/: Cargo.toml
client/src/: batch.rs  connection.rs  connection_util.rs  lib.rs  model.rs  pool.rs  session.rs  transaction.rs
common/: Cargo.toml
common/src/: lib.rs  partition.rs  value.rs
macros/: Cargo.toml
macros/src/: lib.rs
network/: Cargo.toml  build.rs
network/src/: lib.rs  server.rs
network/src/protos/: common.proto  mod.rs  request.rs  response.proto  response.rs
protos/: Cargo.toml  build.rs
protos/src/: common.proto  common.rs  lib.rs  request.proto  request.rs  response.proto  response.rs  util.rs
release/.fingerprint/anyhow-6a49b669c5c23920/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/autocfg-e4442e98f8700c27/: lib-autocfg  lib-autocfg.json
release/.fingerprint/bitflags-2894d9841e26a888/: lib-bitflags  lib-bitflags.json
release/.fingerprint/cfg-if-87c46613e0ddcfc8/: lib-cfg-if  lib-cfg-if.json
release/.fingerprint/fastrand-f3512cc5ee67726b/: lib-fastrand  lib-fastrand.json
release/.fingerprint/indexmap-c73e8f6a979281c6/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/libc-8aee3b72a23c626a/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/libc-f3617b3c82296c40/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/memchr-a2237de25429e67f/: lib-memchr  lib-memchr.json
release/.fingerprint/proc-macro2-576947aac8442ae7/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/proc-macro2-84f8d3420d660adb/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/protobuf-12897c9bae65a547/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/rustix-12ae839918bb3efa/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/rustix-3a7bf4f985c8d17a/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/thiserror-1e80d6e7e3ffbe1a/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/thiserror-7097a9de9a13b864/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/unicode-ident-4cd0c3b4624f7098/: lib-unicode-ident  lib-unicode-ident.json
routing/: Cargo.toml
routing/src/: lib.rs
server/: Cargo.toml
server/src/: context.rs  handlers.rs  lib.rs  listener.rs  proto_parsing.rs  thread_channels.rs  transaction_manager.rs  util.rs
server/src/protos/: common.rs  request.proto  request.rs  response.proto  response.rs
src/: client.rs  main.rs  server.rs
storage/: Cargo.toml
storage/src/: commit_log.rs  lib.rs  memtable.rs  row.rs  skiplist.rs  sstable.rs  table.rs  table_schema.rs  transaction.rs  util.rs  validation.rs
