workspace = { members = [ "network", "routing","storage"] }
[package]
name = "yet-another-rust-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "storage" }
routing = { path = "routing" }
network = { path = "network" }
rand = "0.8.5"
monoio = { version = "0.2.1", features = ["iouring", "sync"] }
futures = "0.3.30"
murmur3 = "0.5.2"
protobuf = "3.3.0"
