workspace = { members = [ "client", "common", "macros", "protos", "server", "storage"] }
[package]
name = "yet-another-rust-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "common" }
storage = { path = "storage" }
server = { path = "server" }
client = { path = "client" }
macros = { path = "macros" }
protos = { path = "protos" }

rand = "0.8.5"
monoio = { version = "0.2.1", features = ["iouring", "sync"] }
futures = "0.3.30"
murmur3 = "0.5.2"
protobuf = "3.3.0"


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
