[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
storage = { path = "../storage" }
protos = { path = "../protos" }
common = { path = "../common" }
monoio = { version = "0.2.1", features = ["iouring", "sync"] }
rand = "0.8.5"
protobuf = "3.3.0"
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
