[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
monoio = { version = "0.2.1", features = ["iouring", "sync"] }
rand = "0.8.5"
get-size = "0.1.4"
regex = "1.10.3"